Fix: Change colors to increase color contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -231,7 +231,7 @@ nav h1 a {
   width: 50%;
 }
 #restaurant-name {
-  color: #f18200;
+  color: #b01ae0;
   font-family: Arial,sans-serif;
   font-size: 20pt;
   font-weight: 200;
@@ -269,7 +269,7 @@ nav h1 a {
   padding: 30px 40px 80px;
 }
 #reviews-container h2 {
-  color: #f58500;
+  color: #b01ae0;
   font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
